# crypto-trading

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
skills/: crypto-technical-analysis.md
src/: __init__.py
src/backtesting/: __init__.py  engine.py  metrics.py  report.py
src/exchange/: __init__.py  base.py  client.py
src/indicators/: __init__.py  base.py  momentum.py  trend.py  volatility.py  volume.py
src/signals/: __init__.py  filters.py  generator.py  manager.py
src/strategies/: __init__.py  base.py  bollinger_squeeze.py  ema_crossover.py  rsi_divergence.py  vwap_bounce.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_backtesting.py  test_exchange.py  test_indicators.py  test_signals.py  test_strategies.py
